# grpc_web_proto_library

./: .bazelrc  MODULE.bazel  README.md  defs.bzl
examples/: BUILD  echo.proto
private/: BUILD  grpc_web_proto_library.bzl  post_process.js
private/external_proto/: BUILD  MODULE.bazel  external.proto
